syntax = "proto3";

option go_package = "github.com/balajiss36/common/api";

package api;

message Order{
    string orderID = 1;
    string customerID = 2;
    string Status = 3;
    repeated Item Items = 4;
}


service OrderService{
rpc CreateOrder(CreateOrderRequest) returns (Order);

}

message Item {
    string ID = 1;
    string Name = 2;
    int32 Quantity = 3;
    string PriceID = 4;
}

message ItemsWithQuantity {
    string ID = 1;
    int32 Quantity = 2;
}

message CreateOrderRequest{
    string customerID = 1;
    repeated ItemsWithQuantity Items = 2;

}

service StockService{
rpc CheckItems(CheckItemsRequest) returns (CheckItemsResponse);
rpc GetItems(GetItemsRequest) returns (GetItemsResponse);
}

message CheckItemsRequest{
    repeated ItemsWithQuantity Items = 1;
}

message CheckItemsResponse{
    repeated ItemsWithQuantity Items = 1;
}   

message GetItemsRequest{
    repeated string ItemIDs = 1;
}

message GetItemsResponse{
    repeated Item Items = 1;
}